<?xml version="1.0"?>
<package>
  <name>roboteq</name>
  <version>0.1.0</version>
  <description>Package which provides a library and a ROS node for interfacing with the Roboteq motor controller</description>

  <maintainer email="j.claro@campus.fct.unl.pt">Jorge Claro</maintainer>  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>serial_utils</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>serial_utils</run_depend>
  <run_depend>tf</run_depend>

</package>
